# flux-profiler

./: CHARTER.md  DOCKSIDE-EXAM.md  README.md  profiler.py  pyproject.toml
for-fleet/: health-check-2026-04-12_171923.json
src/flux_profiler/: __init__.py  benchmarks.py  profiler.py  reporter.py  stats.py  vm_adapter.py
src/flux_profiler.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  test_benchmarks.py  test_enhanced_profiling.py  test_profiler.py  test_profiling.py  test_reporter.py  test_reports.py  test_stats.py
